# walletka-core

./: .gitignore  Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
src/: builder.rs  enums.rs  errors.rs  lib.rs  utils.rs  walletka.rs
src/io/: database.rs  mod.rs
src/io/clients/: mod.rs  nostr_client.rs
src/io/entities/: cashu_mint.rs  cashu_proof.rs  contact.rs  mod.rs  transaction.rs  txo.rs
src/io/repositories/: bitcoin_repository.rs  cashu_repository.rs  contacts_repository.rs  mod.rs  transaction_respository.rs
src/services/: contacts_manager.rs  contacts_service.rs  mod.rs
src/types/: amount.rs  mod.rs  walletka_asset.rs  walletka_balance.rs
src/wallets/: bitcoin.rs  cashu.rs  mod.rs  rgb.rs  walletka_traits.rs
walletka-core-ffi/: Cargo.toml  build.rs  uniffi.toml
walletka-core-ffi/src/: lib.rs  utils.rs  walletka-core.udl
