[workspace]
members = ["cli", "."]
resolver = "2"

[workspace.package]
version = "0.1.0"
rust-version = "1.76.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.80"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
bdk = { version = "0.29.0", features = ["all-keys", "keys-bip39"] }
bdk_esplora = { version = "0.11.0", default-features = false, features = [
    "std",
    "blocking",
] }
clap = { version = "4.5.2", features = ["derive"] }
log = "0.4.21"
env_logger = "0.11.3"
dotenv = "0.15.0"
envy = "0.4.2"
serde = { version = "1.0.197", features = ["derive"] }
thiserror = { version = "1.0", default-features = false }

[package]
name = "walletka-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
bdk = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
bdk_esplora = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
surrealdb = { version = "=1.3.0", features = ["kv-rocksdb", "kv-mem"] }
nostr-sdk = "0.30.0"
itertools = "0.12.1"
cashu-sdk = { git = "https://github.com/Walletka/cashu-crab", branch = "cashu-sdk-kotlin-android", default-features = false, features = [
    "mint",
    "wallet",
] }
sha256 = "1.5.0"
