[package]
name = "cli"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walletka-core = { path = "../" }
log = { workspace = true }
env_logger = { workspace = true }
clap = { workspace = true }
envy = { workspace = true }
tokio = { workspace = true }
dotenv = { workspace = true }
anyhow = { workspace = true }
