[package]
name = "cli"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walletka-core = { path = "../" }
log = { workspace = true }
env_logger = { workspace = true }
clap = { workspace = true }
envy = { workspace = true }
tokio = { workspace = true }
dotenv = { workspace = true }
anyhow = { workspace = true }
