[package]
name = "walletka-core-ffi"
version.workspace = true
rust-version.workspace = true
edition.workspace = true


[lib]
crate-type = ["cdylib"]
name = "walletkacoreffi"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[features]
default = ["uniffi/cli"]

[dependencies]
tokio = { workspace = true }
uniffi = { version = "0.27.1", default-features = false}
walletka-core = { path = "../" }

[build-dependencies]
uniffi = { version = "0.27.1", default-features = false, features = [ "build" ] }

[target.'cfg(target_os = "android")'.dependencies]
openssl = { version = "0.10", default-features = false, features = [
    "vendored",
] }
